--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ url: "https://schwarz-e.github.io" # replace with your actual GitHub Pages URL
 author: Erica L. Schwarz
 
 # Theme settings
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/minimal-mist@v0.2.0
+
 plugins:
   - jekyll-remote-theme
 
