--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ url: "https://schwarz-e.github.io" # replace with your actual GitHub Pages URL
 author: Erica L. Schwarz
 
 # Theme settings
-remote_theme: pages-themes/minimal-mist@v0.2.0
-
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 
@@ -28,7 +27,7 @@ navigation:
     link: /contact
 
 # Social media
-social_links:
+social:
   github: schwarz-e
   linkedin: ericaschwarz
   scholar: https://scholar.google.com/citations?user=s4mUv1AAAAAJ
