--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://schwarz-e.github.io" # replace with your actual GitHub Pages URL
 author: Erica L. Schwarz
 
 # Theme settings
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 
@@ -27,9 +27,9 @@ navigation:
     link: /contact
 
 # Social media
-social_links:
+# social_links:
   github: schwarz-e
-  linkedin: ericaschwarz
+  linkedin: erica-schwarz-41886772
   scholar: https://scholar.google.com/citations?user=s4mUv1AAAAAJ
   orcid: https://orcid.org/0000-0003-3219-6653
 
