--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,11 @@ navigation:
     link: /contact
 
 # Social media
-# social_links:
-  github: schwarz-e
-  linkedin: erica-schwarz-41886772
-  scholar: https://scholar.google.com/citations?user=s4mUv1AAAAAJ
-  orcid: https://orcid.org/0000-0003-3219-6653
+minimal:
+  social_links:
+    github: schwarz-e
+    linkedin: erica-schwarz-41886772
+    scholar: https://scholar.google.com/citations?user=s4mUv1AAAAAJ
+    orcid: https://orcid.org/0000-0003-3219-6653
 
 markdown: kramdown
