--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author: Erica L. Schwarz
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
+theme: jekyll-theme-minimal
 
 # Appearance
 logo: /assets/headshot_2024_square_bw.png  # add a headshot in assets/
