--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ plugins:
 # Appearance
 logo: /assets/headshot_2024_square_bw.png  # add a headshot in assets/
 show_downloads: false
+github.is_user_page: false
 
 # Navigation links (appear in header)
 navigation:
