--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Erica L. Schwarz, Ph.D.
-description: Computational mechanobiologist studying vascular growth and remodeling using simulation and data-driven modeling.
+# description: Computational mechanobiologist studying vascular growth and remodeling using simulation and data-driven modeling.
 url: "https://schwarz-e.github.io" # replace with your actual GitHub Pages URL
 author: Erica L. Schwarz
 
