--- a/assets/_data/publications.yml
+++ b/assets/_data/publications.yml
@@ -1,167 +1,196 @@
-- title: Multiphysics simulations of a bioprinted pulsatile fontan conduit
-  authors: Zinan Hu and Jessica E Herrmann and Erica L Schwarz and Fannie M Gerosa and Nir Emuna and Jay
-    D Humphrey and Adam W Feinberg and Tain-Yen Hsia and Mark A Skylar-Scott and Alison L Marsden
+- title: Multiphysics Simulations of a Bioprinted Pulsatile Fontan Conduit
+  authors: Hu, Z., Herrmann, J. E., **Schwarz, E. L.**, Gerosa, F. M., Emuna, N.,
+    Humphrey, J. D., Feinberg, A. W., Hsia, T., Skylar-Scott, M. A., & Marsden, A.
+    L.
   year: 2025
-  venue: Journal of Biomechanical Engineering
+  journal: Journal of Biomechanical Engineering
   url: https://asmedigitalcollection.asme.org/biomechanical/article-abstract/147/7/071001/1214591
-- title: Oversized conduits predict stenosis in tissue engineered vascular grafts
-  authors: Kevin M Blum and Mackenzie E Turner and Erica L Schwarz and Cameron A Best and John M Kelly
-    and Andrew R Yates and Kan N Hor and Yuichi Matsuzaki and Joseph D Drews and Jason Zakko and Kejal
-    Shah and Toshiharu Shinoka and Jay D Humphrey and Alison L Marsden and Christopher K Breuer
+  id: hu2025multiphysics
+- title: Oversized Conduits Predict Stenosis in Tissue Engineered Vascular Grafts
+  authors: Blum, K. M., Turner, M. E., **Schwarz, E. L.**, Best, C. A., Kelly, J.
+    M., Yates, A. R., Hor, K. N., Matsuzaki, Y., Drews, J. D., Zakko, J., Shah, K.,
+    Shinoka, T., Humphrey, J. D., Marsden, A. L., & Breuer, C. K.
   year: 2025
-  venue: 'JACC: Basic to Translational Science'
+  journal: 'JACC: Basic to Translational Science'
   url: https://www.sciencedirect.com/science/article/pii/S2452302X25000658
-- title: A Cross-scale Causal Mapping Framework Pinpoints Macrophage Orchestrators of Balanced Arterial
-    Development
-  authors: Jonghyeuk Han and Dasom Kong and Erica Schwarz and Felipe Takaesu and Seunguk Lee and Chae-lin
-    Kim and Evan Yang and Minseon Park and Eunha Kim and Wook Kim and Abhay B Ramachandra and Edward P
-    Manning and Jay D Humphrey and Hyun-Ji Park and Michael Davis
+  id: blum2025oversized
+- title: A Cross-scale Causal Mapping Framework Pinpoints Macrophage Orchestrators
+    of Balanced Arterial Development
+  authors: Han, J., Kong, D., **Schwarz, E.**, Takaesu, F., Lee, S., Kim, C., Yang,
+    E., Park, M., Kim, E., Kim, W., Ramachandra, A. B., Manning, E. P., Humphrey,
+    J. D., Park, H., & Davis, M.
   year: 2025
-  venue: bioRxiv
+  journal: bioRxiv
   url: https://www.biorxiv.org/content/10.1101/2025.10.08.681286.abstract
-- title: Postnatal Pulmonary Artery Development from Transcript to Tissue
-  authors: Erica L Schwarz and Abhay B Ramachandra and Nicola Yeung and Edward P Manning and Dar Weiss
-    and Jay D Humphrey
+  id: han2025crossscale
+- title: Postnatal Pulmonary Artery Development From Transcript to Tissue
+  authors: '**Schwarz, E. L.**, Ramachandra, A. B., Yeung, N., Manning, E. P., Weiss,
+    D., & Humphrey, J. D.'
   year: 2025
-  venue: bioRxiv
+  journal: bioRxiv
   url: https://pmc.ncbi.nlm.nih.gov/articles/PMC12157632/
-- title: Tissue engineered vascular grafts are resistant to the formation of dystrophic calcification
-  authors: Mackenzie E Turner and Kevin M Blum and Tatsuya Watanabe and Erica L Schwarz and Mahboubeh
-    Nabavinia and Joseph T Leland and Delaney J Villarreal and William E Schwartzman and Ting-Heng Chou
-    and Peter B Baker and Goki Matsumura and Rajesh Krishnamurthy and Andrew R Yates and Kan N Hor and
-    Jay D Humphrey and Alison L Marsden and Mitchel R Stacy and Toshiharu Shinoka and Christopher K Breuer
+  id: schwarz2025postnatal
+- title: Tissue Engineered Vascular Grafts Are Resistant to the Formation of Dystrophic
+    Calcification
+  authors: Turner, M. E., Blum, K. M., Watanabe, T., **Schwarz, E. L.**, Nabavinia,
+    M., Leland, J. T., Villarreal, D. J., Schwartzman, W. E., Chou, T., Baker, P.
+    B., Matsumura, G., Krishnamurthy, R., Yates, A. R., Hor, K. N., Humphrey, J. D.,
+    Marsden, A. L., Stacy, M. R., Shinoka, T., & Breuer, C. K.
   year: 2024
-  venue: Nature communications
+  journal: Nature communications
   url: https://www.nature.com/articles/s41467-024-46431-4
-- title: 'FSGe: A fast and strongly-coupled 3D fluid–solid-growth interaction method'
-  authors: Martin R Pfaller and Marcos Latorre and Erica L Schwarz and Fannie M Gerosa and Jason M Szafron
-    and Jay D Humphrey and Alison L Marsden
+  id: turner2024tissue
+- title: 'Fsge: a Fast and Strongly-coupled 3d Fluid–solid-growth Interaction Method'
+  authors: Pfaller, M. R., Latorre, M., **Schwarz, E. L.**, Gerosa, F. M., Szafron,
+    J. M., Humphrey, J. D., & Marsden, A. L.
   year: 2024
-  venue: Computer Methods in Applied Mechanics and Engineering
+  journal: Computer Methods in Applied Mechanics and Engineering
   url: https://www.sciencedirect.com/science/article/pii/S0045782524005152
-- title: 'Vip Cells: Screening Key Players And Calculating Their Contributions In Cardiovascular Tissue
-    Remodeling And Regeneration With Supervised Learning'
-  authors: J Han and F Takaesu and EL Schwarz and JD Humphrey and ME Davis
+  id: pfaller2024fsge
+- title: 'Vip Cells: Screening Key Players and Calculating Their Contributions in
+    Cardiovascular Tissue Remodeling and Regeneration with Supervised Learning'
+  authors: Han, J., Takaesu, F., **Schwarz, E.**, Humphrey, J., & Davis, M.
   year: 2024
-  venue: ''
+  journal: ''
   url: https://scholar.google.com/scholar?cluster=8431695312055723732&hl=en&oi=scholarr
-- title: 'Beyond CFD: Emerging methodologies for predictive simulation in cardiovascular health and disease'
-  authors: Erica L Schwarz and Luca Pegolotti and Martin R Pfaller and Alison L Marsden
+  id: han2024vip
+- title: 'Beyond Cfd: Emerging Methodologies for Predictive Simulation in Cardiovascular
+    Health and Disease'
+  authors: '**Schwarz, E. L.**, Pegolotti, L., Pfaller, M. R., & Marsden, A. L.'
   year: 2023
-  venue: ''
+  journal: ''
   url: https://pubs.aip.org/aip/bpr/article/4/1/011301/2879057
-- title: A fluid–solid-growth solver for cardiovascular modeling
-  authors: Erica L Schwarz and Martin R Pfaller and Jason M Szafron and Marcos Latorre and Stephanie E
-    Lindsey and Christopher K Breuer and Jay D Humphrey and Alison L Marsden
+  id: schwarz2023beyond
+- title: A Fluid–solid-growth Solver for Cardiovascular Modeling
+  authors: '**Schwarz, E. L.**, Pfaller, M. R., Szafron, J. M., Latorre, M., Lindsey,
+    S. E., Breuer, C. K., Humphrey, J. D., & Marsden, A. L.'
   year: 2023
-  venue: Computer methods in applied mechanics and engineering
+  journal: Computer methods in applied mechanics and engineering
   url: https://www.sciencedirect.com/science/article/pii/S004578252300436X
-- title: A matched-pair case control study identifying hemodynamic predictors of cerebral aneurysm growth
-    using computational fluid dynamics
-  authors: Allyson J Weiss and Aaron O Panduro and Erica L Schwarz and Zachary A Sexton and Ingrid S Lan
-    and Thomas R Geisbush and Alison L Marsden and Nicholas A Telischak
+  id: schwarz2023fluidsolidgrowth
+- title: A Matched-pair Case Control Study Identifying Hemodynamic Predictors of Cerebral
+    Aneurysm Growth Using Computational Fluid Dynamics
+  authors: Weiss, A. J., Panduro, A. O., **Schwarz, E. L.**, Sexton, Z. A., Lan, I.
+    S., Geisbush, T. R., Marsden, A. L., & Telischak, N. A.
   year: 2023
-  venue: Frontiers in Physiology
+  journal: Frontiers in Physiology
   url: https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2023.1300754/full
-- title: Computational Modeling of Tissue-Engineered Vascular Grafts
-  authors: Erica Leigh Schwarz
+  id: weiss2023matchedpair
+- title: Computational Modeling of Tissue-engineered Vascular Grafts
+  authors: '**Schwarz, E. L.**'
   year: 2023
-  venue: ''
+  journal: ''
   url: https://search.proquest.com/openview/6fd0b56d3551b51cbdb994571d712980/1?pq-origsite=gscholar&cbl=18750&diss=y
-- title: Tissue engineered vascular grafts transform into autologous neovessels capable of native function
-    and growth
-  authors: Kevin M Blum and Jacob C Zbinden and Abhay B Ramachandra and Stephanie E Lindsey and Jason
-    M Szafron and James W Reinhardt and Megan Heitkemper and Cameron A Best and Gabriel JM Mirhaidari
-    and Yu-Chun Chang and Anudari Ulziibayar and John Kelly and Kejal V Shah and Joseph D Drews and Jason
-    Zakko and Shinka Miyamoto and Yuichi Matsuzaki and Ryuma Iwaki and Hira Ahmad and Robbie Daulton and
-    Drew Musgrave and Matthew G Wiet and Eric Heuer and Emily Lawson and Erica Schwarz and Michael R McDermott
-    and Rajesh Krishnamurthy and Ramkumar Krishnamurthy and Kan Hor and Aimee K Armstrong and Brian A
-    Boe and Darren P Berman and Aaron J Trask and Jay D Humphrey and Alison L Marsden and Toshiharu Shinoka
-    and Christopher K Breuer
+  id: schwarz2023computational
+- title: Tissue Engineered Vascular Grafts Transform Into Autologous Neovessels Capable
+    of Native Function and Growth
+  authors: Blum, K. M., Zbinden, J. C., Ramachandra, A. B., Lindsey, S. E., Szafron,
+    J. M., Reinhardt, J. W., Heitkemper, M., Best, C. A., Mirhaidari, G. J., Chang,
+    Y., Ulziibayar, A., Kelly, J., Shah, K. V., Drews, J. D., Zakko, J., Miyamoto,
+    S., Matsuzaki, Y., Iwaki, R., Ahmad, H., Daulton, R., Musgrave, D., Wiet, M. G.,
+    Heuer, E., Lawson, E., **Schwarz, E.**, McDermott, M. R., Krishnamurthy, R., Krishnamurthy,
+    R., Hor, K., Armstrong, A. K., Boe, B. A., Berman, D. P., Trask, A. J., Humphrey,
+    J. D., Marsden, A. L., Shinoka, T., & Breuer, C. K.
   year: 2022
-  venue: Communications medicine
+  journal: Communications medicine
   url: https://www.nature.com/articles/s43856-021-00063-7
-- title: Patient-specific changes in aortic hemodynamics is associated with thrombotic risk after fenestrated
-    endovascular aneurysm repair with large diameter endografts
-  authors: Kenneth Tran and K Brennan Feliciano and Weiguang Yang and Erica L Schwarz and Alison L Marsden
-    and Ronald L Dalman and Jason T Lee
+  id: blum2022tissue
+- title: Patient-specific Changes in Aortic Hemodynamics Is Associated with Thrombotic
+    Risk After Fenestrated Endovascular Aneurysm Repair with Large Diameter Endografts
+  authors: Tran, K., Feliciano, K. B., Yang, W., **Schwarz, E. L.**, Marsden, A. L.,
+    Dalman, R. L., & Lee, J. T.
   year: 2022
-  venue: JVS-Vascular Science
+  journal: JVS-Vascular Science
   url: https://www.sciencedirect.com/science/article/pii/S2666350322000098
-- title: Biodegradable external wrapping promotes favorable adaptation in an ovine vein graft model
-  authors: Abhay B Ramachandra and Hanjay Wang and Alexa Wnorowski and Erica L Schwarz and Joshua Pickering
-    and Joseph C Heiler and Haley J Lucian and Camille E Hironaka and Nicholas A Tran and Yu Liu and Muhammad
-    Owais Khan and Oluwatomisin Obafemi and Yuko Tada and Andrew M Kahn and Nazish Sayed and Joseph C
-    Wu and Jay D Humphrey and Jack H Boyd and Alison L Marsden
+  id: tran2022patientspecific
+- title: Biodegradable External Wrapping Promotes Favorable Adaptation in an Ovine
+    Vein Graft Model
+  authors: Ramachandra, A. B., Wang, H., Wnorowski, A., **Schwarz, E. L.**, Pickering,
+    J., Heiler, J. C., Lucian, H. J., Hironaka, C. E., Tran, N. A., Liu, Y., Khan,
+    M. O., Obafemi, O., Tada, Y., Kahn, A. M., Sayed, N., Wu, J. C., Humphrey, J.
+    D., Boyd, J. H., & Marsden, A. L.
   year: 2022
-  venue: Acta biomaterialia
+  journal: Acta biomaterialia
   url: https://www.sciencedirect.com/science/article/pii/S1742706122005049
+  id: ramachandra2022biodegradable
 - title: Simulated Performance of a Bioprinted Pulsatile Fontan Conduit
-  authors: Zinan Hu and Erica Schwarz and Jessica Herrmann and Mark Skylar-Scott and Alison Marsden
+  authors: Hu, Z., **Schwarz, E.**, Herrmann, J., Skylar-Scott, M., & Marsden, A.
   year: 2022
-  venue: Bulletin of the American Physical Society
+  journal: Bulletin of the American Physical Society
   url: https://meetings.aps.org/Meeting/DFD22/Session/S01.76
-- title: Hemodynamic performance of tissue-engineered vascular grafts in Fontan patients
-  authors: Erica L Schwarz and John M Kelly and Kevin M Blum and Kan N Hor and Andrew R Yates and Jacob
-    C Zbinden and Aekaansh Verma and Stephanie E Lindsey and Abhay B Ramachandra and Jason M Szafron and
-    Jay D Humphrey and Toshiharu Shin’oka and Alison L Marsden and Christopher K Breuer
+  id: hu2022simulated
+- title: Hemodynamic Performance of Tissue-engineered Vascular Grafts in Fontan Patients
+  authors: '**Schwarz, E. L.**, Kelly, J. M., Blum, K. M., Hor, K. N., Yates, A. R.,
+    Zbinden, J. C., Verma, A., Lindsey, S. E., Ramachandra, A. B., Szafron, J. M.,
+    Humphrey, J. D., Shin’oka, T., Marsden, A. L., & Breuer, C. K.'
   year: 2021
-  venue: NPJ Regenerative Medicine
+  journal: NPJ Regenerative Medicine
   url: https://www.nature.com/articles/s41536-021-00148-w
-- title: 'Publisher Correction: Hemodynamic performance of tissue-engineered vascular grafts in Fontan
-    patients'
-  authors: Erica L Schwarz and John M Kelly and Kevin M Blum and Kan N Hor and Andrew R Yates and Jacob
-    C Zbinden and Aekaansh Verma and Stephanie E Lindsey and Abhay B Ramachandra and Jason M Szafron and
-    Jay D Humphrey and Toshiharu Shin’oka and Alison L Marsden and Christopher K Breuer
+  id: schwarz2021hemodynamic
+- title: 'Publisher Correction: Hemodynamic Performance of Tissue-engineered Vascular
+    Grafts in Fontan Patients'
+  authors: '**Schwarz, E. L.**, Kelly, J. M., Blum, K. M., Hor, K. N., Yates, A. R.,
+    Zbinden, J. C., Verma, A., Lindsey, S. E., Ramachandra, A. B., Szafron, J. M.,
+    Humphrey, J. D., Shin’oka, T., Marsden, A. L., & Breuer, C. K.'
   year: 2021
-  venue: NPJ Regenerative Medicine
+  journal: NPJ Regenerative Medicine
   url: https://pmc.ncbi.nlm.nih.gov/articles/PMC8360958/
-- title: A spinal probe incorporating an electromechanical system for detection and prevention of breaches
-    during surgery
-  authors: Anvesh Annadanam and Robert Allen and Chetan Bettegowda and Ravi Gaddipati and Luis Herrera
-    and Bradley Isaacs and Sheng-fu Lo and Eric Xie and Clay Andrews and Adarsha Malla and Erica Schwarz
+  id: schwarz2021publisher
+- title: A Spinal Probe Incorporating an Electromechanical System for Detection and
+    Prevention of Breaches During Surgery
+  authors: Annadanam, A., Allen, R., Bettegowda, C., Gaddipati, R., Herrera, L., Isaacs,
+    B., Lo, S., Xie, E., Andrews, C., Malla, A., & **Schwarz, E.**
   year: 2017
-  venue: ''
+  journal: ''
   url: https://patents.google.com/patent/US20170056075A1/en
-- title: Patient-derived models link re-entrant driver localization in atrial fibrillation to fibrosis
-    spatial pattern
-  authors: Sohail Zahid and Hubert Cochet and Patrick M Boyle and Erica L Schwarz and Kaitlyn N Whyte
-    and Edward J Vigmond and Rémi Dubois and Meleze Hocini and Michel Haïssaguerre and Pierre Jaïs and
-    Natalia A Trayanova
+  id: annadanam2017spinal
+- title: Patient-derived Models Link Re-entrant Driver Localization in Atrial Fibrillation
+    to Fibrosis Spatial Pattern
+  authors: Zahid, S., Cochet, H., Boyle, P. M., **Schwarz, E. L.**, Whyte, K. N.,
+    Vigmond, E. J., Dubois, R., Hocini, M., Haïssaguerre, M., Jaïs, P., & Trayanova,
+    N. A.
   year: 2016
-  venue: Cardiovascular research
+  journal: Cardiovascular research
   url: https://academic.oup.com/cardiovascres/article-abstract/110/3/443/1744836
-- title: Feasibility of using patient-specific models and the “minimum cut” algorithm to predict optimal
-    ablation targets for left atrial flutter
-  authors: Sohail Zahid and Kaitlyn N Whyte and Erica L Schwarz and Robert C Blake III and Patrick M Boyle
-    and Jonathan Chrispin and Adityo Prakosa and Esra G Ipek and Farhad Pashakhanloo and Henry R Halperin
-    and Hugh Calkins and Ronald D Berger and Saman Nazarian and Natalia A Trayanova
+  id: zahid2016patientderived
+- title: Feasibility of Using Patient-specific Models and the “minimum Cut” Algorithm
+    to Predict Optimal Ablation Targets for Left Atrial Flutter
+  authors: Zahid, S., Whyte, K. N., **Schwarz, E. L.**, III, R. C. B., Boyle, P. M.,
+    Chrispin, J., Prakosa, A., Ipek, E. G., Pashakhanloo, F., Halperin, H. R., Calkins,
+    H., Berger, R. D., Nazarian, S., & Trayanova, N. A.
   year: 2016
-  venue: Heart rhythm
+  journal: Heart rhythm
   url: https://www.sciencedirect.com/science/article/pii/S1547527116302053
-- title: Pulse duration determines efficacy of arrhythmia termination via targeted optogenetic stimulation
-  authors: Patrick M Boyle and Michael Murphy and Thomas V Karathanos and Dafang Wang and Sohail Zahid
-    and Kaitlyn N Whyte and Erica L Schwarz and Emilia Entcheva and Natalia A Trayanova
+  id: zahid2016feasibility
+- title: Pulse Duration Determines Efficacy of Arrhythmia Termination Via Targeted
+    Optogenetic Stimulation
+  authors: Boyle, P. M., Murphy, M., Karathanos, T. V., Wang, D., Zahid, S., Whyte,
+    K. N., **Schwarz, E. L.**, Entcheva, E., & Trayanova, N. A.
   year: 2016
-  venue: Biophysical Journal
+  journal: Biophysical Journal
   url: https://www.cell.com/biophysj/fulltext/S0006-3495(15)04310-6
-- title: 'Local complexity of the fibrosis spatial pattern determines the locations of stable reentrant
-    sources in persistent atrial fibrillation: analysis from patient specific models'
-  authors: PM Boyle and S Zahid and EL Schwarz and KN Whyte and EJ Vigmond and R Dubois and M Haïssaguerre
-    and M Hocini and P Jaïs and H Cochet and NA Trayanova
+  id: boyle2016pulse
+- title: 'Local Complexity of the Fibrosis Spatial Pattern Determines the Locations
+    of Stable Reentrant Sources in Persistent Atrial Fibrillation: Analysis From Patient
+    Specific Models'
+  authors: Boyle, P., Zahid, S., **Schwarz, E.**, Whyte, K., Vigmond, E., Dubois,
+    R., Haïssaguerre, M., Hocini, M., Jaïs, P., Cochet, H., & Trayanova, N.
   year: 2015
-  venue: Heart Rhythm
+  journal: Heart Rhythm
   url: https://scholar.google.com/scholar?cluster=14829968984659802707&hl=en&oi=scholarr
-- title: Hemodynamic performance of tissueengineered vascular grafts in Fontan patients, Npj Regen. Med.
-    6 (2021) 38
-  authors: EL Schwarz and JM Kelly and KM Blum and KN Hor and AR Yates and JC Zbinden and A Verma and
-    SE Lindsey and AB Ramachandra and JM Szafron and JD Humphrey and T Shin’oka and AL Marsden and CK
-    Breuer
+  id: boyle2015local
+- title: Hemodynamic Performance of Tissueengineered Vascular Grafts in Fontan Patients,
+    Npj Regen. Med. 6 (2021) 38
+  authors: '**Schwarz, E.**, Kelly, J., Blum, K., Hor, K., Yates, A., Zbinden, J.,
+    Verma, A., Lindsey, S., Ramachandra, A., Szafron, J., Humphrey, J., Shin’oka,
+    T., Marsden, A., & Breuer, C.'
   year: ''
-  venue: ''
+  journal: ''
   url: https://scholar.google.com/scholar?cluster=10282104494400906300&hl=en&oi=scholarr
-- title: 'PLEASE CITE THIS ARTICLE AS DOI: 10.1063/5.0109400'
-  authors: Erica L Schwarz and Luca Pegolotti and Martin R Pfaller and Alison L Marsden
+  id: schwarzn.d.hemodynamic
+- title: 'Please Cite This Article As Doi: 10.1063/5.0109400'
+  authors: '**Schwarz, E. L.**, Pegolotti, L., Pfaller, M. R., & Marsden, A. L.'
   year: ''
-  venue: ''
+  journal: ''
   url: https://scholar.google.com/scholar?cluster=17441077725524417170&hl=en&oi=scholarr
+  id: schwarzn.d.please
