--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,83 +1,85 @@
 - title: Multiphysics Simulations of a Bioprinted Pulsatile Fontan Conduit
-  authors: Hu, Z., Herrmann, J. E., **Schwarz, E. L.**, Gerosa, F. M., Emuna, N.,
-    Humphrey, J. D., Feinberg, A. W., Hsia, T., Skylar-Scott, M. A., & Marsden, A.
-    L.
+  authors: Hu, Z., Herrmann, J. E., <strong>Schwarz, E. L.<strong/>, Gerosa, F. M.,
+    Emuna, N., Humphrey, J. D., Feinberg, A. W., Hsia, T., Skylar-Scott, M. A., &
+    Marsden, A. L.
   year: 2025
   journal: Journal of Biomechanical Engineering
   url: https://asmedigitalcollection.asme.org/biomechanical/article-abstract/147/7/071001/1214591
   id: hu2025multiphysics
 - title: Oversized Conduits Predict Stenosis in Tissue Engineered Vascular Grafts
-  authors: Blum, K. M., Turner, M. E., **Schwarz, E. L.**, Best, C. A., Kelly, J.
-    M., Yates, A. R., Hor, K. N., Matsuzaki, Y., Drews, J. D., Zakko, J., Shah, K.,
-    Shinoka, T., Humphrey, J. D., Marsden, A. L., & Breuer, C. K.
+  authors: Blum, K. M., Turner, M. E., <strong>Schwarz, E. L.<strong/>, Best, C. A.,
+    Kelly, J. M., Yates, A. R., Hor, K. N., Matsuzaki, Y., Drews, J. D., Zakko, J.,
+    Shah, K., Shinoka, T., Humphrey, J. D., Marsden, A. L., & Breuer, C. K.
   year: 2025
   journal: 'JACC: Basic to Translational Science'
   url: https://www.sciencedirect.com/science/article/pii/S2452302X25000658
   id: blum2025oversized
 - title: A Cross-scale Causal Mapping Framework Pinpoints Macrophage Orchestrators
     of Balanced Arterial Development
-  authors: Han, J., Kong, D., **Schwarz, E.**, Takaesu, F., Lee, S., Kim, C., Yang,
-    E., Park, M., Kim, E., Kim, W., Ramachandra, A. B., Manning, E. P., Humphrey,
-    J. D., Park, H., & Davis, M.
+  authors: Han, J., Kong, D., <strong>Schwarz, E.<strong/>, Takaesu, F., Lee, S.,
+    Kim, C., Yang, E., Park, M., Kim, E., Kim, W., Ramachandra, A. B., Manning, E.
+    P., Humphrey, J. D., Park, H., & Davis, M.
   year: 2025
   journal: bioRxiv
   url: https://www.biorxiv.org/content/10.1101/2025.10.08.681286.abstract
   id: han2025crossscale
 - title: Postnatal Pulmonary Artery Development From Transcript to Tissue
-  authors: '**Schwarz, E. L.**, Ramachandra, A. B., Yeung, N., Manning, E. P., Weiss,
-    D., & Humphrey, J. D.'
+  authors: <strong>Schwarz, E. L.<strong/>, Ramachandra, A. B., Yeung, N., Manning,
+    E. P., Weiss, D., & Humphrey, J. D.
   year: 2025
   journal: bioRxiv
   url: https://pmc.ncbi.nlm.nih.gov/articles/PMC12157632/
   id: schwarz2025postnatal
 - title: Tissue Engineered Vascular Grafts Are Resistant to the Formation of Dystrophic
     Calcification
-  authors: Turner, M. E., Blum, K. M., Watanabe, T., **Schwarz, E. L.**, Nabavinia,
-    M., Leland, J. T., Villarreal, D. J., Schwartzman, W. E., Chou, T., Baker, P.
-    B., Matsumura, G., Krishnamurthy, R., Yates, A. R., Hor, K. N., Humphrey, J. D.,
-    Marsden, A. L., Stacy, M. R., Shinoka, T., & Breuer, C. K.
+  authors: Turner, M. E., Blum, K. M., Watanabe, T., <strong>Schwarz, E. L.<strong/>,
+    Nabavinia, M., Leland, J. T., Villarreal, D. J., Schwartzman, W. E., Chou, T.,
+    Baker, P. B., Matsumura, G., Krishnamurthy, R., Yates, A. R., Hor, K. N., Humphrey,
+    J. D., Marsden, A. L., Stacy, M. R., Shinoka, T., & Breuer, C. K.
   year: 2024
   journal: Nature communications
   url: https://www.nature.com/articles/s41467-024-46431-4
   id: turner2024tissue
 - title: 'Fsge: a Fast and Strongly-coupled 3d Fluid–solid-growth Interaction Method'
-  authors: Pfaller, M. R., Latorre, M., **Schwarz, E. L.**, Gerosa, F. M., Szafron,
-    J. M., Humphrey, J. D., & Marsden, A. L.
+  authors: Pfaller, M. R., Latorre, M., <strong>Schwarz, E. L.<strong/>, Gerosa, F.
+    M., Szafron, J. M., Humphrey, J. D., & Marsden, A. L.
   year: 2024
   journal: Computer Methods in Applied Mechanics and Engineering
   url: https://www.sciencedirect.com/science/article/pii/S0045782524005152
   id: pfaller2024fsge
 - title: 'Vip Cells: Screening Key Players and Calculating Their Contributions in
     Cardiovascular Tissue Remodeling and Regeneration with Supervised Learning'
-  authors: Han, J., Takaesu, F., **Schwarz, E.**, Humphrey, J., & Davis, M.
+  authors: Han, J., Takaesu, F., <strong>Schwarz, E.<strong/>, Humphrey, J., & Davis,
+    M.
   year: 2024
   journal: ''
   url: https://scholar.google.com/scholar?cluster=8431695312055723732&hl=en&oi=scholarr
   id: han2024vip
 - title: 'Beyond Cfd: Emerging Methodologies for Predictive Simulation in Cardiovascular
     Health and Disease'
-  authors: '**Schwarz, E. L.**, Pegolotti, L., Pfaller, M. R., & Marsden, A. L.'
+  authors: <strong>Schwarz, E. L.<strong/>, Pegolotti, L., Pfaller, M. R., & Marsden,
+    A. L.
   year: 2023
   journal: ''
   url: https://pubs.aip.org/aip/bpr/article/4/1/011301/2879057
   id: schwarz2023beyond
 - title: A Fluid–solid-growth Solver for Cardiovascular Modeling
-  authors: '**Schwarz, E. L.**, Pfaller, M. R., Szafron, J. M., Latorre, M., Lindsey,
-    S. E., Breuer, C. K., Humphrey, J. D., & Marsden, A. L.'
+  authors: <strong>Schwarz, E. L.<strong/>, Pfaller, M. R., Szafron, J. M., Latorre,
+    M., Lindsey, S. E., Breuer, C. K., Humphrey, J. D., & Marsden, A. L.
   year: 2023
   journal: Computer methods in applied mechanics and engineering
   url: https://www.sciencedirect.com/science/article/pii/S004578252300436X
   id: schwarz2023fluidsolidgrowth
 - title: A Matched-pair Case Control Study Identifying Hemodynamic Predictors of Cerebral
     Aneurysm Growth Using Computational Fluid Dynamics
-  authors: Weiss, A. J., Panduro, A. O., **Schwarz, E. L.**, Sexton, Z. A., Lan, I.
-    S., Geisbush, T. R., Marsden, A. L., & Telischak, N. A.
+  authors: Weiss, A. J., Panduro, A. O., <strong>Schwarz, E. L.<strong/>, Sexton,
+    Z. A., Lan, I. S., Geisbush, T. R., Marsden, A. L., & Telischak, N. A.
   year: 2023
   journal: Frontiers in Physiology
   url: https://www.frontiersin.org/journals/physiology/articles/10.3389/fphys.2023.1300754/full
   id: weiss2023matchedpair
 - title: Computational Modeling of Tissue-engineered Vascular Grafts
-  authors: '**Schwarz, E. L.**'
+  authors: <strong>Schwarz, E. L.<strong/>
   year: 2023
   journal: ''
   url: https://search.proquest.com/openview/6fd0b56d3551b51cbdb994571d712980/1?pq-origsite=gscholar&cbl=18750&diss=y
@@ -88,50 +90,51 @@
     J. M., Reinhardt, J. W., Heitkemper, M., Best, C. A., Mirhaidari, G. J., Chang,
     Y., Ulziibayar, A., Kelly, J., Shah, K. V., Drews, J. D., Zakko, J., Miyamoto,
     S., Matsuzaki, Y., Iwaki, R., Ahmad, H., Daulton, R., Musgrave, D., Wiet, M. G.,
-    Heuer, E., Lawson, E., **Schwarz, E.**, McDermott, M. R., Krishnamurthy, R., Krishnamurthy,
-    R., Hor, K., Armstrong, A. K., Boe, B. A., Berman, D. P., Trask, A. J., Humphrey,
-    J. D., Marsden, A. L., Shinoka, T., & Breuer, C. K.
+    Heuer, E., Lawson, E., <strong>Schwarz, E.<strong/>, McDermott, M. R., Krishnamurthy,
+    R., Krishnamurthy, R., Hor, K., Armstrong, A. K., Boe, B. A., Berman, D. P., Trask,
+    A. J., Humphrey, J. D., Marsden, A. L., Shinoka, T., & Breuer, C. K.
   year: 2022
   journal: Communications medicine
   url: https://www.nature.com/articles/s43856-021-00063-7
   id: blum2022tissue
 - title: Patient-specific Changes in Aortic Hemodynamics Is Associated with Thrombotic
     Risk After Fenestrated Endovascular Aneurysm Repair with Large Diameter Endografts
-  authors: Tran, K., Feliciano, K. B., Yang, W., **Schwarz, E. L.**, Marsden, A. L.,
-    Dalman, R. L., & Lee, J. T.
+  authors: Tran, K., Feliciano, K. B., Yang, W., <strong>Schwarz, E. L.<strong/>,
+    Marsden, A. L., Dalman, R. L., & Lee, J. T.
   year: 2022
   journal: JVS-Vascular Science
   url: https://www.sciencedirect.com/science/article/pii/S2666350322000098
   id: tran2022patientspecific
 - title: Biodegradable External Wrapping Promotes Favorable Adaptation in an Ovine
     Vein Graft Model
-  authors: Ramachandra, A. B., Wang, H., Wnorowski, A., **Schwarz, E. L.**, Pickering,
-    J., Heiler, J. C., Lucian, H. J., Hironaka, C. E., Tran, N. A., Liu, Y., Khan,
-    M. O., Obafemi, O., Tada, Y., Kahn, A. M., Sayed, N., Wu, J. C., Humphrey, J.
-    D., Boyd, J. H., & Marsden, A. L.
+  authors: Ramachandra, A. B., Wang, H., Wnorowski, A., <strong>Schwarz, E. L.<strong/>,
+    Pickering, J., Heiler, J. C., Lucian, H. J., Hironaka, C. E., Tran, N. A., Liu,
+    Y., Khan, M. O., Obafemi, O., Tada, Y., Kahn, A. M., Sayed, N., Wu, J. C., Humphrey,
+    J. D., Boyd, J. H., & Marsden, A. L.
   year: 2022
   journal: Acta biomaterialia
   url: https://www.sciencedirect.com/science/article/pii/S1742706122005049
   id: ramachandra2022biodegradable
 - title: Simulated Performance of a Bioprinted Pulsatile Fontan Conduit
-  authors: Hu, Z., **Schwarz, E.**, Herrmann, J., Skylar-Scott, M., & Marsden, A.
+  authors: Hu, Z., <strong>Schwarz, E.<strong/>, Herrmann, J., Skylar-Scott, M., &
+    Marsden, A.
   year: 2022
   journal: Bulletin of the American Physical Society
   url: https://meetings.aps.org/Meeting/DFD22/Session/S01.76
   id: hu2022simulated
 - title: Hemodynamic Performance of Tissue-engineered Vascular Grafts in Fontan Patients
-  authors: '**Schwarz, E. L.**, Kelly, J. M., Blum, K. M., Hor, K. N., Yates, A. R.,
-    Zbinden, J. C., Verma, A., Lindsey, S. E., Ramachandra, A. B., Szafron, J. M.,
-    Humphrey, J. D., Shin’oka, T., Marsden, A. L., & Breuer, C. K.'
+  authors: <strong>Schwarz, E. L.<strong/>, Kelly, J. M., Blum, K. M., Hor, K. N.,
+    Yates, A. R., Zbinden, J. C., Verma, A., Lindsey, S. E., Ramachandra, A. B., Szafron,
+    J. M., Humphrey, J. D., Shin’oka, T., Marsden, A. L., & Breuer, C. K.
   year: 2021
   journal: NPJ Regenerative Medicine
   url: https://www.nature.com/articles/s41536-021-00148-w
   id: schwarz2021hemodynamic
 - title: 'Publisher Correction: Hemodynamic Performance of Tissue-engineered Vascular
     Grafts in Fontan Patients'
-  authors: '**Schwarz, E. L.**, Kelly, J. M., Blum, K. M., Hor, K. N., Yates, A. R.,
-    Zbinden, J. C., Verma, A., Lindsey, S. E., Ramachandra, A. B., Szafron, J. M.,
-    Humphrey, J. D., Shin’oka, T., Marsden, A. L., & Breuer, C. K.'
+  authors: <strong>Schwarz, E. L.<strong/>, Kelly, J. M., Blum, K. M., Hor, K. N.,
+    Yates, A. R., Zbinden, J. C., Verma, A., Lindsey, S. E., Ramachandra, A. B., Szafron,
+    J. M., Humphrey, J. D., Shin’oka, T., Marsden, A. L., & Breuer, C. K.
   year: 2021
   journal: NPJ Regenerative Medicine
   url: https://pmc.ncbi.nlm.nih.gov/articles/PMC8360958/
@@ -139,15 +142,15 @@
 - title: A Spinal Probe Incorporating an Electromechanical System for Detection and
     Prevention of Breaches During Surgery
   authors: Annadanam, A., Allen, R., Bettegowda, C., Gaddipati, R., Herrera, L., Isaacs,
-    B., Lo, S., Xie, E., Andrews, C., Malla, A., & **Schwarz, E.**
+    B., Lo, S., Xie, E., Andrews, C., Malla, A., & <strong>Schwarz, E.<strong/>
   year: 2017
   journal: ''
   url: https://patents.google.com/patent/US20170056075A1/en
   id: annadanam2017spinal
 - title: Patient-derived Models Link Re-entrant Driver Localization in Atrial Fibrillation
     to Fibrosis Spatial Pattern
-  authors: Zahid, S., Cochet, H., Boyle, P. M., **Schwarz, E. L.**, Whyte, K. N.,
-    Vigmond, E. J., Dubois, R., Hocini, M., Haïssaguerre, M., Jaïs, P., & Trayanova,
+  authors: Zahid, S., Cochet, H., Boyle, P. M., <strong>Schwarz, E. L.<strong/>, Whyte,
+    K. N., Vigmond, E. J., Dubois, R., Hocini, M., Haïssaguerre, M., Jaïs, P., & Trayanova,
     N. A.
   year: 2016
   journal: Cardiovascular research
@@ -155,9 +158,9 @@
   id: zahid2016patientderived
 - title: Feasibility of Using Patient-specific Models and the “minimum Cut” Algorithm
     to Predict Optimal Ablation Targets for Left Atrial Flutter
-  authors: Zahid, S., Whyte, K. N., **Schwarz, E. L.**, III, R. C. B., Boyle, P. M.,
-    Chrispin, J., Prakosa, A., Ipek, E. G., Pashakhanloo, F., Halperin, H. R., Calkins,
-    H., Berger, R. D., Nazarian, S., & Trayanova, N. A.
+  authors: Zahid, S., Whyte, K. N., <strong>Schwarz, E. L.<strong/>, III, R. C. B.,
+    Boyle, P. M., Chrispin, J., Prakosa, A., Ipek, E. G., Pashakhanloo, F., Halperin,
+    H. R., Calkins, H., Berger, R. D., Nazarian, S., & Trayanova, N. A.
   year: 2016
   journal: Heart rhythm
   url: https://www.sciencedirect.com/science/article/pii/S1547527116302053
@@ -165,7 +168,7 @@
 - title: Pulse Duration Determines Efficacy of Arrhythmia Termination Via Targeted
     Optogenetic Stimulation
   authors: Boyle, P. M., Murphy, M., Karathanos, T. V., Wang, D., Zahid, S., Whyte,
-    K. N., **Schwarz, E. L.**, Entcheva, E., & Trayanova, N. A.
+    K. N., <strong>Schwarz, E. L.<strong/>, Entcheva, E., & Trayanova, N. A.
   year: 2016
   journal: Biophysical Journal
   url: https://www.cell.com/biophysj/fulltext/S0006-3495(15)04310-6
@@ -173,23 +176,25 @@
 - title: 'Local Complexity of the Fibrosis Spatial Pattern Determines the Locations
     of Stable Reentrant Sources in Persistent Atrial Fibrillation: Analysis From Patient
     Specific Models'
-  authors: Boyle, P., Zahid, S., **Schwarz, E.**, Whyte, K., Vigmond, E., Dubois,
-    R., Haïssaguerre, M., Hocini, M., Jaïs, P., Cochet, H., & Trayanova, N.
+  authors: Boyle, P., Zahid, S., <strong>Schwarz, E.<strong/>, Whyte, K., Vigmond,
+    E., Dubois, R., Haïssaguerre, M., Hocini, M., Jaïs, P., Cochet, H., & Trayanova,
+    N.
   year: 2015
   journal: Heart Rhythm
   url: https://scholar.google.com/scholar?cluster=14829968984659802707&hl=en&oi=scholarr
   id: boyle2015local
 - title: Hemodynamic Performance of Tissueengineered Vascular Grafts in Fontan Patients,
     Npj Regen. Med. 6 (2021) 38
-  authors: '**Schwarz, E.**, Kelly, J., Blum, K., Hor, K., Yates, A., Zbinden, J.,
-    Verma, A., Lindsey, S., Ramachandra, A., Szafron, J., Humphrey, J., Shin’oka,
-    T., Marsden, A., & Breuer, C.'
+  authors: <strong>Schwarz, E.<strong/>, Kelly, J., Blum, K., Hor, K., Yates, A.,
+    Zbinden, J., Verma, A., Lindsey, S., Ramachandra, A., Szafron, J., Humphrey, J.,
+    Shin’oka, T., Marsden, A., & Breuer, C.
   year: ''
   journal: ''
   url: https://scholar.google.com/scholar?cluster=10282104494400906300&hl=en&oi=scholarr
   id: schwarzn.d.hemodynamic
 - title: 'Please Cite This Article As Doi: 10.1063/5.0109400'
-  authors: '**Schwarz, E. L.**, Pegolotti, L., Pfaller, M. R., & Marsden, A. L.'
+  authors: <strong>Schwarz, E. L.<strong/>, Pegolotti, L., Pfaller, M. R., & Marsden,
+    A. L.
   year: ''
   journal: ''
   url: https://scholar.google.com/scholar?cluster=17441077725524417170&hl=en&oi=scholarr
