editing research pages

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -16,7 +16,7 @@
   id: blum2025oversized
 - title: A Cross-scale Causal Mapping Framework Pinpoints Macrophage Orchestrators
     of Balanced Arterial Development
-  authors: Han, J., Kong, D., <strong>Schwarz, E.</strong>, Takaesu, F., Lee, S.,
+  authors: Han, J., Kong, D., <strong>Schwarz, E. L.</strong>, Takaesu, F., Lee, S.,
     Kim, C., Yang, E., Park, M., Kim, E., Kim, W., Ramachandra, A. B., Manning, E.
     P., Humphrey, J. D., Park, H., & Davis, M.
   year: 2025
@@ -49,7 +49,7 @@
   id: pfaller2024fsge
 - title: 'VIP Cells: Screening Key Players and Calculating Their Contributions in
     Cardiovascular Tissue Remodeling and Regeneration with Supervised Learning'
-  authors: Han, J., Takaesu, F., <strong>Schwarz, E.</strong>, Humphrey, J., & Davis,
+  authors: Han, J., Takaesu, F., <strong>Schwarz, E. L.</strong>, Humphrey, J., & Davis,
     M.
   year: 2024
   journal: ''
@@ -90,7 +90,7 @@
     J. M., Reinhardt, J. W., Heitkemper, M., Best, C. A., Mirhaidari, G. J., Chang,
     Y., Ulziibayar, A., Kelly, J., Shah, K. V., Drews, J. D., Zakko, J., Miyamoto,
     S., Matsuzaki, Y., Iwaki, R., Ahmad, H., Daulton, R., Musgrave, D., Wiet, M. G.,
-    Heuer, E., Lawson, E., <strong>Schwarz, E.</strong>, McDermott, M. R., Krishnamurthy,
+    Heuer, E., Lawson, E., <strong>Schwarz, E. L.</strong>, McDermott, M. R., Krishnamurthy,
     R., Krishnamurthy, R., Hor, K., Armstrong, A. K., Boe, B. A., Berman, D. P., Trask,
     A. J., Humphrey, J. D., Marsden, A. L., Shinoka, T., & Breuer, C. K.
   year: 2022
@@ -116,7 +116,7 @@
   url: https://www.sciencedirect.com/science/article/pii/S1742706122005049
   id: ramachandra2022biodegradable
 - title: Simulated Performance of a Bioprinted Pulsatile Fontan Conduit
-  authors: Hu, Z., <strong>Schwarz, E.</strong>, Herrmann, J., Skylar-Scott, M., &
+  authors: Hu, Z., <strong>Schwarz, E. L.</strong>, Herrmann, J., Skylar-Scott, M., &
     Marsden, A.
   year: 2022
   journal: Bulletin of the American Physical Society
@@ -142,7 +142,7 @@
 - title: A Spinal Probe Incorporating an Electromechanical System for Detection and
     Prevention of Breaches During Surgery
   authors: Annadanam, A., Allen, R., Bettegowda, C., Gaddipati, R., Herrera, L., Isaacs,
-    B., Lo, S., Xie, E., Andrews, C., Malla, A., & <strong>Schwarz, E.</strong>
+    B., Lo, S., Xie, E., Andrews, C., Malla, A., & <strong>Schwarz, E. L.</strong>
   year: 2017
   journal: ''
   url: https://patents.google.com/patent/US20170056075A1/en
@@ -176,7 +176,7 @@
 - title: 'Local Complexity of the Fibrosis Spatial Pattern Determines the Locations
     of Stable Reentrant Sources in Persistent Atrial Fibrillation: Analysis From Patient
     Specific Models'
-  authors: Boyle, P., Zahid, S., <strong>Schwarz, E.</strong>, Whyte, K., Vigmond,
+  authors: Boyle, P., Zahid, S., <strong>Schwarz, E. L.</strong>, Whyte, K., Vigmond,
     E., Dubois, R., Haïssaguerre, M., Hocini, M., Jaïs, P., Cochet, H., & Trayanova,
     N.
   year: 2015
@@ -185,7 +185,7 @@
   id: boyle2015local
 - title: Hemodynamic Performance of Tissueengineered Vascular Grafts in Fontan Patients,
     Npj Regen. Med. 6 (2021) 38
-  authors: <strong>Schwarz, E.</strong>, Kelly, J., Blum, K., Hor, K., Yates, A.,
+  authors: <strong>Schwarz, E. L.</strong>, Kelly, J., Blum, K., Hor, K., Yates, A.,
     Zbinden, J., Verma, A., Lindsey, S., Ramachandra, A., Szafron, J., Humphrey, J.,
     Shin’oka, T., Marsden, A., & Breuer, C.
   year: ''
